<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary1" >
    
    <!-- Overall layout -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${relativePackage}.${activityClass}"
    android:orientation="vertical"
    >

    
    <!-- Header Box -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_box_height"
        android:background="@color/primary3"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small"
        android:weightSum="1" >
    
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            
            android:paddingTop="@dimen/padding_medium"
            android:gravity="center_horizontal"
	
            android:text="@string/view_service_user"
            android:textSize="@dimen/font_size"
            android:textColor="@color/primary5"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_small"
            android:background="@drawable/button_back"
            android:drawableTop="@drawable/ic_action_overflow"
            android:gravity="center_horizontal"
            android:text="@string/edit_button"
            android:textColor="@color/primary1"
            android:textSize="@dimen/font_size"
            tools:ignore="RtlHardcoded" />
    
    </LinearLayout>
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_horizontal"

        android:text="@string/placeholder_service_user_name"
        android:textSize="@dimen/font_size"
        android:textColor="@color/primary5"
        android:textStyle="bold"
        />

    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center_horizontal"
        
        android:text="@string/placeholder_service_user_details"
        android:textSize="@dimen/font_size"
        android:textColor="@color/primary5"
        />
    
    
    <!-- AnteNatal, Personal and PostNatal buttons -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="3"
        
        android:layout_marginBottom="@dimen/margin_small">
            
            <TextView
                android:layout_width="@dimen/stroke_small"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_medium"
                android:background="@color/primary5"
                tools:ignore="RtlHardcoded" />
            
            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:text="@string/info_antenatal"
                android:textColor="@color/primary5"
                android:textSize="@dimen/font_size_small"
                
                android:background="@drawable/button_blank"
                android:drawableTop="@drawable/ic_action_overflow"
                />
            
            <TextView 
                android:layout_height="match_parent"
                android:layout_width="@dimen/stroke_small"
                android:background="@color/primary5"
                />
            
            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:text="@string/info_personal"
                android:textColor="@color/primary5"
                android:textSize="@dimen/font_size_small"

                android:background="@drawable/button_blank"
                android:drawableTop="@drawable/ic_action_overflow"
                />
            
            <TextView 
                android:layout_height="match_parent"
                android:layout_width="@dimen/stroke_small"
                android:background="@color/primary5"
                />
                        
            <Button
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"

                android:text="@string/info_postnatal"
                android:textColor="@color/primary5"
                android:textSize="@dimen/font_size_small"

                android:background="@drawable/button_blank"
                android:drawableTop="@drawable/ic_action_overflow"
                />
            
            <TextView
                android:layout_width="@dimen/stroke_small"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/margin_medium"
                android:background="@color/primary5"
                tools:ignore="RtlHardcoded" />
            
    </LinearLayout>
    
    <TextView 
        android:layout_height="@dimen/stroke_small"
        android:layout_width="match_parent"
        
        android:background="@color/primary5"
        
        android:layout_marginLeft="@dimen/margin_large"
        android:layout_marginRight="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"
        />
    

    <!-- Layout of info boxes -->
    
    <!-- EDD -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        
        android:background="@drawable/top_of_table"
        >
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            
            android:text="@string/placeholder_date"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="left|center_vertical"
            />
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            
            android:text="@string/edd"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="right|center_vertical"
            />
        
    </LinearLayout>

    <!-- Gestation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="@dimen/margin_negative"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        
        android:background="@drawable/element_of_table"
        >
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            
            android:text="@string/placeholder_gestation"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="left|center_vertical"
            />
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            
            android:text="@string/gestation"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="right|center_vertical"
            />
        
    </LinearLayout>
    
    <!-- Blood Group -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="@dimen/margin_negative"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        
        android:background="@drawable/element_of_table"
        >
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            
            android:text="@string/blood_group_A"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="left|center_vertical"
            />
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            
            android:text="@string/blood_group"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="right|center_vertical"
            />
        
    </LinearLayout>
    
    
    <!-- Rhesus -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="@dimen/margin_negative"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        
        android:background="@drawable/element_of_table"
        >
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            
            android:text="@string/rhesus_negative"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="left|center_vertical"
            />
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            
            android:text="@string/rhesus"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="right|center_vertical"
            />
        
    </LinearLayout>
    
    
    <!-- Parity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:layout_marginTop="@dimen/margin_negative"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        
        android:background="@drawable/element_of_table"
        >
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            
            android:text="@string/placeholder_parity"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="left|center_vertical"
            />
    
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            
            android:text="@string/parity"
            android:textSize="@dimen/font_size"           
            android:textColor="@color/primary5"
            android:gravity="right|center_vertical"
            />
        
    </LinearLayout>
    
    <!-- Obstetric History -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
      	android:layout_marginTop="@dimen/margin_negative"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:padding="@dimen/padding_small"
        
        android:background="@drawable/bottom_of_table"
        >
        
        <TextView 
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            
            android:text="@string/yes"
            android:textSize="@dimen/font_size"
            android:textColor="@color/primary5"
            android:gravity="left|center_vertical"

            />
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="center_vertical|right"
            android:text="@string/obstetric_history"
            android:textColor="@color/primary5"
            android:textSize="@dimen/font_size" />
        
    </LinearLayout>
    
    
</LinearLayout>
</ScrollView>
